# DesktopAI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  PRD.txt  README.md  SKILLS.md  SPEC.md  UAT-Guide.md  desktopai.sh  dogfood.sh  pyproject.toml  pytest.ini  setup.sh
.claude/: claudio-mission-05-uat-fixes.md  claudio-mission-06-action-dispatch.md  governance.json
.github/workflows/: backend-test.yml  llm-integration.yml  rust-test.yml  skills-score.yml  skills-validate.yml  ui-gate.yml
backend/: .env.example  requirements.txt
backend/app/: action_executor.py  auth.py  autonomy.py  autonomy_promoter.py  bridge.py  chat_memory.py  classifier.py  collector_status.py  command_history.py  config.py  db.py  deps.py  desktop_context.py  detection_merger.py  llm_provider.py  main.py  memory.py  notification_engine.py  notifications.py  ollama.py  orchestrator.py  personality_adapter.py  planner.py  playwright_executor.py  recipes.py  runtime_logs.py  schemas.py  selftest.py  state.py  stt.py  tts.py  ui_telemetry.py  vision_agent.py  ws.py
backend/packs/: __init__.py
backend/tests/: conftest.py  test_action_executor.py  test_api.py  test_auth.py  test_autonomy.py  test_autonomy_promoter.py  test_bridge.py  test_bridge_executor.py  test_chat.py  test_chat_memory.py  test_classifier.py  test_collector_status.py  test_command_history.py  test_db.py  test_desktop_context.py  test_detection_merger.py  test_executor.py  test_ingest.py  test_llm_integration.py  test_memory.py  test_notification_engine.py  test_notifications.py  test_ollama.py  (+36 more)
collector/: Cargo.toml
collector/src/: command.rs  config.rs  detection.rs  event.rs  idle.rs  lib.rs  main.rs  network.rs  screenshot.rs  uia.rs  windows.rs
docs/: AGENT_GUIDE.md  Real-Time Desktop AI Perception Agent (Windows) – Product Requirements Document.docx
scripts/: continue_intelligently.ahk  deploy-detection-model.sh  download-detection-model.sh  download-stt-model.sh  download-tts-model.sh  export-detection-model.py  score_all_skill_evals.py  score_skill_evals.py  skill_eval_lib.py  ui_artifacts_summary.py  ui_telemetry_sessions.py  validate_skill_assets.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
ui-tests/: package-lock.json  package.json  playwright.config.js  telemetry-gate.json
(+79 files in other folders)
