[package]
name = "desktopai-collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "desktopai_collector"
path = "src/lib.rs"

[[bin]]
name = "desktopai-collector"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Com",
  "Win32_Graphics_Gdi"
] }
url = "2.5"
tungstenite = "0.21"
ureq = { version = "2.9", features = ["json"] }
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
jpeg-encoder = "0.6"
base64 = "0.22"

[dev-dependencies]
serde_json = "1.0"
